updates background for visibility

--- a/calc.css
+++ b/calc.css
@@ -1,6 +1,6 @@
 body {
     height: 100vh;
-    background-color: #f7f7f7;
+    background-color: #000000;
     display: flex;
     overflow: hidden;
 }
